--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,7 @@
-/node_modules
-/public/hot
-/public/storage
-/storage/*.key
-/vendor
-.env
-.env.backup
-.phpunit.result.cache
-Homestead.json
-Homestead.yaml
-npm-debug.log
-yarn-error.log
-/server/lib/storage
+**/node_modules
+**/public/hot
+**/public/storage
+**/storage/*.key
+**/vendor
+**.phpunit.result.cache
+**/storage
