--- a/03-solution/server/Dockerfile
+++ b/03-solution/server/Dockerfile
@@ -30,7 +30,7 @@ WORKDIR /var/www/html
 
 RUN composer install
 
-#COPY startup.sh /usr/local/bin/startup.sh
-#RUN chmod +x /usr/local/bin/startup.sh
+COPY startup.sh /usr/local/bin/startup.sh
+RUN chmod +x /usr/local/bin/startup.sh
 
-#CMD ["/usr/local/bin/startup.sh"]
+CMD ["/usr/local/bin/startup.sh"]
